chore(standard-version): setup

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "release": "HUSKY_SKIP_HOOKS=1 standard-version"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -46,6 +47,7 @@
     "jest": "^25.1.0",
     "lint-staged": ">=10",
     "prettier": "^1.19.1",
+    "standard-version": "^8.0.0",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
