--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -40,4 +40,4 @@ jobs:
         run: yarn test:e2e
 
       - name: run linter
-        run: yarn eslint \"{src,apps,libs,test}/**/*.ts\"
+        run: yarn eslint {src,apps,libs,test}/**/*.ts
