--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -1,6 +1,10 @@
 name: ci_workflow
 
 on:
+  push:
+    branches:
+      - master
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
 
